# auto_uw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run_agent.py
auto_uw/: __init__.py  agent.py  claude_context.py  cli.py  document_store.py  model_context.py  models.py  report_generator.py
data/: base_premium_rates.csv  risk_adjustment_factors.csv
examples/: sample_quote.json  sample_request.json
tests/: __init__.py  test_agent.py  test_cli.py  test_document_store.py
tests/data/: test_guidelines.json  test_requests.json
